Image uploading, product creation, policy, fixes
