# resources/views/partials/admin/new-game.blade.php
@@ -1,101 +1,56 @@
-<div class="container p-4">
+<section class="container p-4">
     <h4 class="text-shadow">ADD A NEW GAME</h4>
     <span class="text-muted">Add a game to the platform</span>
 
-    <h4 class="mt-5 text-shadow">GAME IDENTITY</h4>
-    <span class="text-muted">Enter the basic game information</span>
+    <form method="POST" action="/admin/products/add_product" enctype="multipart/form-data">
+        {{ csrf_field() }}
+        @include('partials.admin.product-form')
 
-    <div class="my-2 row ml-auto mb-4">
-        <input type="text" class="form-control my-auto col-5  bg-secondary text-light" style="height:50px"
-            placeholder="*Title">
-        <div class="col-1"></div>
-        <input type="text" class="form-control my-auto col-5 bg-secondary text-light" style="height:50px"
-            placeholder="*Developer">
-    </div>
-    <div class="my-2 row mb-5 ml-auto">
-        <input type="text" class="form-control my-auto col-5 bg-secondary text-light" style="height:50px"
-            placeholder="*Date">
-        <div class="col-1"></div>
-        <input type="text" class="form-control my-auto col-5 bg-secondary text-light" style="height:50px"
-            placeholder="*Price">
-    </div>
-    <div class="my-2 row ml-auto">
-        <textarea class="form-control col-11  bg-dark text-light" name="description"
-            placeholder="Enter the game's description" rows="6" required=""></textarea>
-    </div>
-    <hr>
-    <h4 class="mt-5 text-shadow">GAME IMAGES</h4>
-    <span class="text-muted">Add the cover photo and the image gallery for this game</span>
+        <hr>
+        <h4 class="mt-5 text-shadow">IMAGES AND TAGS</h4>
+        <span class="text-muted">Add the the image gallery and tags for this game</span>
 
-    <div class="my-2 row ">
-        <div class="form-group col-12">
-            <div class="input-group mb-3">
-                <div class="custom-file">
-                    <input type="file" class="custom-file-input " id="inputGroupFile02">
-                    <label class="custom-file-label" for="inputGroupFile02">Add galery
-                        photos</label>
+        <div class="my-2 row ">
+
+            <div class="col-6">
+                <div class="row">
+                    <label for="images" class="col control-label">Gallery Images</label>
                 </div>
-                <div class="input-group-append">
-                    <span class="input-group-text">Upload</span>
+                <div class="row">
+                    <input type="file" name="images[]" class="col mt-2" multiple required>
+                </div>
+
+
+
+                <div class="row">
+                    <div class="col">
+                        <button class="btn btn-success my-5 btn-lg w-100" type="submit">
+                            Add Game</button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
 
-    <hr>
-    <h4 class="mt-5 text-shadow">CATEGORIES AND VISIBILITY</h4>
-    <span class="text-muted">Select the game's tags, categories and the visibility in the
-        store</span>
-
-    <div class="row mt-4">
-
-        <div class="col-5">
-            Category
-            <select name="Category" class="form-control bg-dark text-light">
-                <option value="Action">Action</option>
-                <option value="Adventure">Adventure</option>
-                <option value="etc">etc</option>
-                <option value="etc">etc</option>
-            </select>
-        </div>
-        <div class="col-1"></div>
-        <div class="col-5">
-            Listed
-            <select name="Category" class="form-control bg-dark text-light">
-                <option value="Yes">Yes</option>
-                <option value="No">No</option>
-            </select>
-        </div>
-
-
-    </div>
-    <div class="row mt-4">
-        <div class="col-lg-5 col-md-6">
-            <div class="row ml-auto">
-                <label for="exampleSelect2 ">Tags</label>
-                <select multiple="" class="form-control bg-dark text-light" id="exampleSelect2">
+            <div class="col-6">
+                <label for="tags ">Tags</label>
+                <select multiple="" name="tags" class="form-control bg-dark text-light">
                     <option>Open World</option>
                     <option>Souls-like</option>
                     <option>Co-op</option>
                     <option>Story-based</option>
                     <option>Side-scroller</option>
                 </select>
-            </div>
-            <div class="row mt-1 ml-auto">
-                <input type="text" class="form-control my-auto col-6 bg-secondary text-light"
-                    placeholder="*Enter a new tag">
-                <button class="btn btn-info col-6" type="submit">
-                    Add Tag</button>
+                <div class="row mt-2">
+                    <div class="col-9 pr-0">
+                        <input type="text" class="form-control bg-secondary text-light" placeholder="Add New Tag Name">
+                    </div>
+                    <div class="col-3 pl-0">
+                        <button type="button" id="dev_adder" class="btn btn-sm btn-success my-auto"
+                            style="width:100%; height:95%;">
+                            +
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-
-    <div class="row mt-4">
-
-        <div class="col-8 m-auto">
-            <button class="btn btn-success my-5 btn-lg w-100" type="submit">
-                Add Game</button>
-        </div>
-    </div>
-
-</div>
+    </form>
+</section>
